# marketing-agent-api

./: .env.example  .gitignore  README.md  pyproject.toml
src/: config.py  main.py
src/api_crawler/: __init__.py  base_scraper.py  crawler.py
src/api_crawler/agents/: __init__.py  output_structures.py
src/api_crawler/agents/critic/: __init__.py  agent.py  state.py
src/api_crawler/agents/search/: __init__.py  agent.py  node.py  output_structures.py  state.py
src/api_crawler/agents/selector/: __init__.py  agent.py  state.py
src/scrapers/: __init__.py  subreddit_scraper.py
